--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,17 +8,13 @@
 </head>
 <body>
 
-	<% if user_signed_in? %>
-		<%= link_to "Log out", destroy_user_session_path, method: :delete %>
-	<% else %>
-		<%= link_to "Sign in", new_user_session_path %>
-	<% end %>
+	<div id="wrapper">
+	
+		<%= render "layouts/header.html.erb" %>
 
-	<p class="notice"><%= notice %></p>
-	<p class="alert"><%= alert %></p>
-
-
-<%= yield %>
+		<%= yield %>
+	
+	</div>
 
 </body>
 </html>
