--- a/app/views/custom_products/_form2.html.erb
+++ b/app/views/custom_products/_form2.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@custom_product) do |f| %>
+<%= form_for(@custom_product, :html => {:name => "custom_product"}) do |f| %>
   <% if @custom_product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@custom_product.errors.count, "error") %> prohibited this custom_product from being saved:</h2>
@@ -17,7 +17,7 @@
 
   <div class="field">
     <%= f.label :category %><br>
-    <%= f.select :category, ["Billfold", "ID Wallet", "Notebook"] %>
+    <%= f.select :category, ["Billfold", "ID Wallet", "Notebook"], options={ :include_blank => true } %>
   </div>
 
   <div class="field">
