--- a/app/views/custom_products/_form2.html.erb
+++ b/app/views/custom_products/_form2.html.erb
@@ -20,21 +20,22 @@
     <%= f.select :category, ["Billfold", "Card Wallet", "ID Wallet", "Notebook"], options={ :include_blank => true } %>
   </div>
 
+  <div class="field">
+    <%= f.label :price %><br>
+    <%= f.hidden_field :price %>
+    <%= f.label :price %> [render price here]
+  </div>
+
+  <div class="hidden_field">
+    <%= f.text_field :user_id %>
+  </div>
+
+  <div class="hidden_field">
+    <%= f.text_area :options %>
+  </div>
+  
   <div id="custom_options">
 
-    <div class="field">
-      <%= f.label :price %><br>
-      <%= f.hidden_field :price %>
-      <%= f.label :price %> [render price here]
-    </div>
-
-    <div class="field">
-      <%= f.hidden_field :user_id %>
-    </div>
-
-    <div class="field">
-      <%= f.hidden_field :options %>
-    </div>
 
     <p>Design</p>
 
