--- a/app/views/custom_products/_form2.html.erb
+++ b/app/views/custom_products/_form2.html.erb
@@ -11,8 +11,8 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.hidden_field :name %>
+  <div class="hidden_field">
+    <%= f.text_field :name %>
   </div>
 
   <div class="field">
@@ -27,7 +27,7 @@
   </div>
 
   <div class="hidden_field">
-    <%= f.text_field :user_id %>
+    <%= f.text_field :user_id, :value => @user_id %>
   </div>
 
   <div class="hidden_field">
