--- a/app/views/layouts/custom_products.html.erb
+++ b/app/views/layouts/custom_products.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Decade</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= javascript_include_tag 'public' %>
   <%= csrf_meta_tags %>
