reformat and expan custom_products form

--- a/app/views/custom_products/_form.html.erb
+++ b/app/views/custom_products/_form.html.erb
@@ -107,6 +107,12 @@
         <%= radio_button_tag "notebook_style", "ruled" %>Ruled 
         <%= radio_button_tag "notebook_style", "grid" %>Grid 
       </div>
+      
+      <div id="currency">
+        <%= label_tag: currency %><br>
+        <%= f.select :currency, ["US Dollars", "British Pounds", "Euro", "Japanese Yen"] %>
+      </div>
+
     </div>
 
     <div class="actions">
