add pocket materials, make JS form validation dynamic

--- a/app/views/custom_products/_form2.html.erb
+++ b/app/views/custom_products/_form2.html.erb
@@ -108,8 +108,8 @@
       </div>
 
       <div id="pockets_interior">
-        <%= label_tag :same_as_interior %><br>
-        <%= check_box_tag :same_as_interior, 1, true %>
+        <%= label_tag :pockets_interior %><br>
+        <%= check_box_tag :pockets_interior, 1, true %>
       </div>      
 
       <div id="pocket_materials">
@@ -120,8 +120,8 @@
       </div>
 
       <div id="pockets_same">
-        <%= label_tag :pockets_all_same %><br>
-        <%= check_box_tag :pockets_all_same, 1, true %>
+        <%= label_tag :pockets_same %><br>
+        <%= check_box_tag :pockets_same, 1, true %>
       </div>
 
       <div id="separate_pockets">
