--- a/app/views/custom_products/new.html.erb
+++ b/app/views/custom_products/new.html.erb
@@ -4,4 +4,10 @@
 
 <canvas id="custom_canvas"></canvas>
 
+<div id="product_view">
+        <%= label_tag :view %><br>
+        <%= radio_button_tag "view", "exterior", :value => "checked" %>Exterior 
+        <%= radio_button_tag "view", "interior" %>Interior 
+</div>
+
 <%= link_to 'Back', custom_products_path %>
