--- a/app/views/custom_products/_form2.html.erb
+++ b/app/views/custom_products/_form2.html.erb
@@ -191,6 +191,14 @@
       <%= f.submit "Add to Cart" %>
     </div>
 
+    <canvas id="custom_canvas"></canvas>
+
+    <div id="product_view">
+      <%= label_tag :view %><br>
+      <%= radio_button_tag "view", "exterior", :value => "checked" %>Exterior 
+      <%= radio_button_tag "view", "interior" %>Interior 
+    </div>
+
   </div>
 
 <% end %>
