--- a/app/views/custom_products/_form2.html.erb
+++ b/app/views/custom_products/_form2.html.erb
@@ -191,9 +191,10 @@
       <%= f.submit "Add to Cart" %>
     </div>
 
-    <canvas id="custom_canvas"></canvas>
-
     <div id="product_view">
+    </div>
+
+    <div id="view_choice">
       <%= label_tag :view %><br>
       <%= radio_button_tag "view", "exterior", :value => "checked" %>Exterior 
       <%= radio_button_tag "view", "interior" %>Interior 
