--- a/app/views/custom_products/new.html.erb
+++ b/app/views/custom_products/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Custom Product</h1>
+<div id="js_notice">
+	JavaScript is required to view this page.
+</div>
 
-<%= render 'form2' %>
+<div id="custom_product_content">
+	<h1>New Custom Product</h1>
+
+	<%= render 'form2' %>
+</div>
 
 <%= link_to 'Back', custom_products_path %>
