replace mock values for custom_products form phase 1

--- a/app/views/custom_products/_form2.html.erb
+++ b/app/views/custom_products/_form2.html.erb
@@ -61,17 +61,17 @@
       <div id="stitching">
         <%= label_tag :stitching %><br>
         <span id="stitching_label"></span><br>
-        <%= radio_button_tag "stitching", "material1" %>
-        <%= radio_button_tag "stitching", "material2" %>
-        <%= radio_button_tag "stitching", "material3" %>
+        <%= radio_button_tag "stitching", "natural" %>
+        <%= radio_button_tag "stitching", "black" %>
+        <%= radio_button_tag "stitching", "brown" %>
       </div>
 
       <div id="edges">
         <%= label_tag :edges %><br>
         <span id="edges_label"></span><br>
-        <%= radio_button_tag "edges", "material1" %>
-        <%= radio_button_tag "edges", "material2" %>
-        <%= radio_button_tag "edges", "material3" %>
+        <%= radio_button_tag "edges", "ebony" %>
+        <%= radio_button_tag "edges", "brown" %>
+        <%= radio_button_tag "edges", "beige" %>
       </div>
     
     </div>
